[package]
name = "prometheus_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
pgx = "0.6.1"
prometheus-client = "0.19.0-alpha.2"


[features]
default = ["pg14"]
pg14 = ["pgx/pg14", "pgx-tests/pg14" ]

[dev-dependencies]
pgx-tests = "~0.6.1"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1