[package]
name = "pgui-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
regex = "1.7.1"
url = "2.3.1"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "chrono" ] }
log = "0.4.17"
thiserror = "1.0.38"
base64 = "0.21.0"
