[package]
name = "coredb-pg-base"
version = "15.3.0-coredb-pg-base.3"
edition = "2021"
authors = ["CoreDB.io"]
description = "Base image for CoreDB's distribution of postgres"
homepage = "https://www.coredb.io"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/CoreDB-io/coredb/tree/main/postgres"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
