[package]
name = "coredb-pg-slim"
version = "15.2.0-coredb-pg-slim.15"
edition = "2021"
authors = ["tembo.io"]
description = "CoreDB distribution of postgres"
homepage = "https://www.tembo.io"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tembo-io/tembo/tree/main/postgres"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
