[package]
name = "tembo-pg-cnpg"
version = "15.3.0-tembo-pg-cnpg.1"
edition = "2021"
authors = ["CoreDB.io"]
description = "Container image for Tembo's distribution of postgres"
homepage = "https://www.coredb.io"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/CoreDB-io/coredb/tree/main/postgres"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
