[package]
name = "tembo-pg-cnpg"
version = "15.3.0-3"
edition = "2021"
authors = ["tembo.io"]
description = "Container image for Tembo's distribution of postgres"
homepage = "https://www.tembo.io"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tembo-io/tembo/tree/main/postgres"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
